fixed file upload visibility and styling in Question component

--- a/frontend/src/components/CreateStudy/Question.css
+++ b/frontend/src/components/CreateStudy/Question.css
@@ -57,11 +57,12 @@ select[name='feedbackType']{
 
 
 .fileUploadWrapper {
+    min-height: 3.5rem; 
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 1rem;
-}
+  }
+  
 
 .fileUploadLabel {
     background-color: var(--siteColor);
